--- a/src/Modules/DALModule/KarveDataAccessLayer.csproj
+++ b/src/Modules/DALModule/KarveDataAccessLayer.csproj
@@ -1171,6 +1171,16 @@
     <Compile Include="Exception\SupplierDataServiceAccessDeniedException.cs" />
     <Compile Include="Exception\SupplierDataServicesAccessModifiedException.cs" />
     <Compile Include="VehiclesDataAccessLayer.cs" />
+    <Compile Include="XmlDB\XmlAssistDataService.cs" />
+    <Compile Include="XmlDB\XmlClientDataService.cs" />
+    <Compile Include="XmlDB\XmlComissionAgentDataService.cs" />
+    <Compile Include="XmlDB\XmlCompanyDataService.cs" />
+    <Compile Include="XmlDB\XMLDataServiceImplementation.cs" />
+    <Compile Include="XmlDB\XmlHelperDataService.cs" />
+    <Compile Include="XmlDB\XmlOfficeDataService.cs" />
+    <Compile Include="XmlDB\XmlSettingsDataService.cs" />
+    <Compile Include="XmlDB\XmlSupplierDataService.cs" />
+    <Compile Include="XmlDB\XmlVehicleDataServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
