--- a/src/KarveCar.csproj
+++ b/src/KarveCar.csproj
@@ -98,6 +98,10 @@
     <Reference Include="CommonServiceLocator">
       <HintPath>..\..\..\..\..\Downloads\GitHub\Prism\Source\Wpf\Prism.Unity.Wpf\bin\Debug\CommonServiceLocator.dll</HintPath>
     </Reference>
+    <Reference Include="Dragablz, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\lib\Dragablz.dll</HintPath>
+    </Reference>
     <Reference Include="ExtendedGrid">
       <HintPath>..\lib\ExtendedGrid.dll</HintPath>
     </Reference>
@@ -562,10 +566,6 @@
     <Resource Include="Images\video.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Dragablz\Dragablz\Dragablz.net45.csproj">
-      <Project>{7b11011c-7fd7-4ab0-a1ad-04e940b026de}</Project>
-      <Name>Dragablz.net45</Name>
-    </ProjectReference>
     <ProjectReference Include="Controls\KarveControls\KarveControls.csproj">
       <Project>{183a9ec4-dc89-411d-975d-c67fa4c01747}</Project>
       <Name>KarveControls</Name>
