--- a/src/Modules/PaymentsTypeModule/PaymentTypeModule.csproj
+++ b/src/Modules/PaymentsTypeModule/PaymentTypeModule.csproj
@@ -113,6 +113,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
