--- a/test/KarveTest/KarveTest/KarveTest.csproj
+++ b/test/KarveTest/KarveTest/KarveTest.csproj
@@ -170,6 +170,7 @@
     <Compile Include="UI\VehicleUITests.cs" />
     <Compile Include="ViewModels\TestBase.cs" />
     <Compile Include="ViewModels\TestCompanyInfoViewModel.cs" />
+    <Compile Include="ViewModels\TestCultureSwitcherViewModel.cs" />
     <Compile Include="ViewModels\TestFareInfoViewModel.cs" />
     <Compile Include="ViewModels\TestKarveBaseViewModel.cs" />
     <Compile Include="ViewModels\TestOfficeInfoViewModel.cs" />
@@ -237,7 +238,6 @@
   <ItemGroup>
     <Folder Include="Commands\" />
     <Folder Include="KarveDataServices\DataTransferObject\" />
-    <Folder Include="NewFolder1\" />
     <Folder Include="Toolbar\" />
     <Folder Include="UI\KarveControls\TripleButtonTest\" />
     <Folder Include="UI\KarveControls\VehicleInfoViewTest\" />
