--- a/src/app.config
+++ b/src/app.config
@@ -7,7 +7,7 @@
         </sectionGroup>
     </configSections>
     <connectionStrings>
-        <add name="connectionstring" connectionString="EngineName=DBRENT_NET16; DatabaseName=DBRENT_NET16; Uid=cv; pwd=1929; Links=tcpip(host=172.26.0.45)" />
+        <add name="connectionstring" connectionString="EngineName=DBRENT; DatabaseName=DBRENT; Uid=cv; pwd=1929; Links=tcpip(host=172.26.0.45, port=3000)" />
     </connectionStrings>
     <userSettings>
         <KarveCar.Properties.Settings>
