--- a/src/Modules/InvoiceModule/InvoiceModule.csproj
+++ b/src/Modules/InvoiceModule/InvoiceModule.csproj
@@ -178,6 +178,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
