- added support for the visit grid and lookup. - moved the common code to ViewModelInfo. - broken the old delegation with that (todo fix). - clean up - fixes some tests there are still 86 test to be fixed.

--- a/test/KarveTest/KarveTest/KarveTest.csproj
+++ b/test/KarveTest/KarveTest/KarveTest.csproj
@@ -185,8 +185,8 @@
     <Compile Include="UI\GUITests.cs" />
     <Compile Include="UI\UiObjectSerializationTests.cs" />
     <Compile Include="UI\VehicleUITests.cs" />
-    <Compile Include="ViewModels\ApartmentStateAttribute.cs" />
     <Compile Include="ViewModels\TestBase.cs" />
+    <Compile Include="ViewModels\TestCommissionAgentInfoViewModel.cs" />
     <Compile Include="ViewModels\TestCompanyInfoViewModel.cs" />
     <Compile Include="ViewModels\TestCultureSwitcherViewModel.cs" />
     <Compile Include="ViewModels\TestFareInfoViewModel.cs" />
