- Add integreation test - Added icon.

--- a/src/Controls/KarveControls/KarveCar.Controls.csproj
+++ b/src/Controls/KarveControls/KarveCar.Controls.csproj
@@ -220,6 +220,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Behaviour\ButtonBehavior.cs" />
+    <Compile Include="Behaviour\ChangeRuleBehavior.cs" />
     <Compile Include="Behaviour\ComboAdvChangeBehavior.cs" />
     <Compile Include="Behaviour\GridEditButtonBehavior.cs" />
     <Compile Include="Behaviour\Grid\GridDefaultBehavior.cs" />
