--- a/src/Controls/KarveControls/KarveCommon.csproj
+++ b/src/Controls/KarveControls/KarveCommon.csproj
@@ -147,7 +147,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Modules\DALModule\KarveDataServices\KarveDataServices.csproj">
+    <ProjectReference Include="..\..\Modules\DALModule\KarveDataServices\KarveDataServices.csproj">
       <Project>{83407587-1785-481b-a4fb-23e035173190}</Project>
       <Name>KarveDataServices</Name>
     </ProjectReference>
