--- a/src/Modules/DALModule/KarveDataAccessLayer.csproj
+++ b/src/Modules/DALModule/KarveDataAccessLayer.csproj
@@ -804,6 +804,7 @@
     <Compile Include="DataObjects\ProContact.cs" />
     <Compile Include="DataObjects\ProContactos.cs" />
     <Compile Include="DataObjects\ProDelega.cs" />
+    <Compile Include="DataObjects\ProDelegaPoco.cs" />
     <Compile Include="DataObjects\PRODFINAN_CLIENTE.cs" />
     <Compile Include="DataObjects\PRODUCTOS_FINANCIEROS.cs" />
     <Compile Include="DataObjects\PRODUCTOS_MARKETING.cs" />
@@ -1202,6 +1203,10 @@
     <ProjectReference Include="..\..\KarveCommon\KarveCar.Common.csproj">
       <Project>{49feb437-7f5a-4c7b-870c-a9bb5fc809fd}</Project>
       <Name>KarveCar.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\KarveLocale\KarveCar.Locale.csproj">
+      <Project>{d1d7504f-994c-42fb-a78f-b6078f460f7f}</Project>
+      <Name>KarveCar.Locale</Name>
     </ProjectReference>
     <ProjectReference Include="KarveDataServices\KarveDataServices.csproj">
       <Project>{83407587-1785-481B-A4FB-23E035173190}</Project>
