--- a/test/KarveTest/KarveCar.Integration/KarveCar.Integration.csproj
+++ b/test/KarveTest/KarveCar.Integration/KarveCar.Integration.csproj
@@ -76,6 +76,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MockRegionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ToolbarIntegrationTests.cs" />
   </ItemGroup>
